--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ a {
   left: 50%;
   transform: translate(-50%, -30%);
   opacity: 0;
-  transition: opacity, transform 0.4s;
+  transition: all 0.4s;
   z-index: -1;
 }
 .content_wrap .center .modal_wrap .modal .modal_top {
@@ -466,4 +466,128 @@ a {
 }
 .content_wrap .center .modal_wrap.comfirm_wrap .modal .comfirm_content .btn_wrap span.green:hover {
   background-color: #EDFFF5;
+}
+.content_wrap .center .alert_wrap {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 350px;
+  padding: 10px 20px;
+}
+.content_wrap .center .alert_box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 20px;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 1.1rem;
+  margin-bottom: 10px;
+}
+.content_wrap .center .alert_box.success {
+  background-color: #01B96B;
+}
+.content_wrap .center .alert_box.error {
+  background-color: #FF5E5E;
+}
+.content_wrap .center .alert_box span {
+  font-weight: bold;
+  font-size: 1.5rem;
+  line-height: 1;
+  cursor: pointer;
+  padding: 5px;
+}
+.content_wrap .center .content_box .progress_wrap {
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content_wrap .center .content_box .progress_wrap .progressbar {
+  border: 8px solid #58CE8F;
+  border-top-color: #A6F0C9;
+  border-radius: 100%;
+  height: 50px;
+  width: 50px;
+  -webkit-animation: rotate 1s linear infinite;
+          animation: rotate 1s linear infinite;
+}
+@-webkit-keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(359deg);
+  }
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(359deg);
+  }
+}
+.content_wrap .center .content_box .select_wrap {
+  position: relative;
+  width: 150px;
+}
+.content_wrap .center .content_box .select_wrap .button {
+  width: 100%;
+  padding: 0 20px;
+  text-align: left;
+  color: #969696;
+  border-color: #E8E8E8;
+  transition: color, border-color 0.4s;
+  position: relative;
+  outline: none;
+}
+.content_wrap .center .content_box .select_wrap .button:hover {
+  background-color: #fff;
+}
+.content_wrap .center .content_box .select_wrap .button:focus {
+  color: #01B96B;
+  border-color: #01B96B;
+}
+.content_wrap .center .content_box .select_wrap .arrow {
+  position: relative;
+  cursor: pointer;
+}
+.content_wrap .center .content_box .select_wrap .arrow i {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
+  font-size: 1.5rem;
+  color: #969696;
+}
+.content_wrap .center .content_box .select_wrap .arrow i.green {
+  color: #01B96B;
+}
+.content_wrap .center .content_box .select_wrap .dropdown {
+  width: 100%;
+  text-align: left;
+  color: #969696;
+  border: 1px solid #E8E8E8;
+  border-radius: 5px;
+  box-shadow: 1px 1px 8px 0px rgba(99, 99, 99, 0.1);
+  display: none;
+  background-color: #fff;
+  position: absolute;
+  top: 90px;
+  left: 0;
+}
+.content_wrap .center .content_box .select_wrap .dropdown li {
+  padding: 15px 20px;
+  transition: color, background-color 0.4s;
+  cursor: pointer;
+}
+.content_wrap .center .content_box .select_wrap .dropdown li:hover {
+  color: #01B96B;
+  background-color: #EDFFF5;
+}
+.content_wrap .center .content_box .select_wrap .dropdown.focused {
+  display: block;
 }/*# sourceMappingURL=style.css.map */
