--- a/css/style.scss
+++ b/css/style.scss
@@ -35,6 +35,8 @@ $gray03: #E8E8E8;
 $gray04: #FBFBFB;
 $gray05: #D9D9D9;
 
+$red01: #FF5E5E;
+
 * {
 	margin: 0;
 	padding: 0;
@@ -423,7 +425,7 @@ a{
           left: 50%;
           transform: translate(-50%, -30%);
           opacity: 0;
-          transition: opacity,transform 0.4s;
+          transition: all 0.4s;
           z-index: -1;
           .modal_top {
             display: flex;
@@ -470,6 +472,126 @@ a{
                   }
                 }
               }
+            }
+          }
+        }
+      }
+      //////////////////////////////////////////////////////////////////Alert 
+      .alert_wrap {
+        position: fixed;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 350px;
+        padding: 10px 20px;
+      }
+      .alert_box {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 12px 20px;
+        border-radius: 5px;
+        color: #fff;
+        font-size: 1.1rem;
+        margin-bottom: 10px;
+        &.success {
+          background-color: $green01;
+        }
+        &.error {
+          background-color: $red01;
+        }
+        span {
+          font-weight: bold;
+          font-size: 1.5rem;
+          line-height: 1;
+          cursor: pointer;
+          padding: 5px;
+        }
+      }
+      //////////////////////////////////////////////progress
+      .content_box {
+        .progress_wrap {
+          width: 100px;
+          height: 100px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          .progressbar {
+            border: 8px solid $green02;
+            border-top-color: $green03;
+            border-radius: 100%;
+            height: 50px;
+            width: 50px;
+            animation: rotate 1s  linear infinite;
+          }
+          @keyframes rotate {
+            0% {
+              transform: rotate(0deg);
+            }
+            100% {
+              transform: rotate(359deg);
+            }
+          }
+        }
+        //////////////////////////////////////////////////Select
+        .select_wrap {
+          position: relative;
+          width: 150px;
+            .button {
+              width: 100%;
+              padding: 0 20px;
+              text-align: left;
+              color: $gray02;
+              border-color: $gray03;
+              transition: color,border-color 0.4s;
+              position: relative;
+              outline: none;
+              &:hover {
+                background-color: #fff;
+              }
+              &:focus {
+                color: $green01;
+                border-color: $green01;
+              }
+            }
+            .arrow {
+              position: relative;
+              cursor: pointer;
+              i {
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+                right: 10px;
+                font-size: 1.5rem;
+                color: $gray02;
+                &.green {
+                  color: $green01;
+                }
+              }
+            }
+          .dropdown {
+            width: 100%;
+            text-align: left;
+            color: $gray02;
+            border: 1px solid $gray03;
+            border-radius: 5px;
+            box-shadow: 1px 1px 8px 0px rgba($gray01,0.1);
+            display: none;
+            background-color: #fff;
+            position: absolute;
+            top: 90px;
+            left: 0;
+            li {
+              padding: 15px 20px;
+              transition: color, background-color 0.4s;
+              cursor: pointer;
+              &:hover {
+                color: $green01;
+                background-color: $green04;
+              }
+            }
+            &.focused {
+              display: block;
             }
           }
         }
