--- a/css/comfirm.scss
+++ b/css/comfirm.scss
@@ -8,7 +8,7 @@
 }
 .comfirm_content {
   .btn_wrap {
-    padding: 20px 10px 0 0;
+    padding-top: 20px;
     display: flex;
     justify-content: flex-end;
     span {
