--- a/css/comfirm.css
+++ b/css/comfirm.css
@@ -4,14 +4,22 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.4);
   visibility: hidden;
   opacity: 0;
-  transition: visibility, opacity 0.4s;
+  transition: all 0.4s;
 }
-.modal_wrap.show {
+.modal_wrap.on {
   visibility: visible;
   opacity: 1;
+}
+.modal_wrap .background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 11;
 }
 .modal_wrap .modal {
   width: 50%;
@@ -25,7 +33,7 @@
   transform: translate(-50%, -30%);
   opacity: 0;
   transition: all 0.4s;
-  z-index: -1;
+  z-index: 13;
 }
 .modal_wrap .modal .modal_top {
   display: flex;
@@ -36,10 +44,9 @@
   font-size: 2rem;
   cursor: pointer;
 }
-.modal_wrap .modal.fade {
+.modal_wrap .modal.on {
   transform: translate(-50%, -50%);
   opacity: 1;
-  z-index: 10;
 }
 
 .modal_wrap.comfirm_wrap .modal {
@@ -48,7 +55,7 @@
 }
 
 .comfirm_content .btn_wrap {
-  padding: 20px 10px 0 0;
+  padding-top: 20px;
   display: flex;
   justify-content: flex-end;
 }
