--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -1,4 +1,4 @@
-@-webkit-keyframes fade {
+@-webkit-keyframes text {
   0% {
     opacity: 0;
     transform: translate(-75%, -45%);
@@ -8,7 +8,7 @@
     transform: translate(-55%, -45%);
   }
 }
-@keyframes fade {
+@keyframes text {
   0% {
     opacity: 0;
     transform: translate(-75%, -45%);
@@ -66,8 +66,8 @@
   left: 50%;
   transform: translate(-55%, -45%);
   line-height: 1;
-  -webkit-animation: fade 0.8s ease-in-out;
-          animation: fade 0.8s ease-in-out;
+  -webkit-animation: text 0.8s ease-in-out;
+          animation: text 0.8s ease-in-out;
   -ms-user-select: none;
   -moz-user-select: -moz-none;
   -webkit-user-select: none;
