--- a/css/modal.scss
+++ b/css/modal.scss
@@ -6,13 +6,21 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.4);
   visibility: hidden;
   opacity: 0;
-  transition: visibility, opacity 0.4s;
-  &.show {
+  transition: all 0.4s;
+  &.on {
     visibility: visible;
     opacity: 1;
+  } 
+  .background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 11;
   }
   .modal {
     width: 50%;
@@ -26,7 +34,7 @@
     transform: translate(-50%, -30%);
     opacity: 0;
     transition: all 0.4s;
-    z-index: -1;
+    z-index: 13;
     .modal_top {
       display: flex;
       justify-content: space-between;
@@ -36,10 +44,9 @@
         cursor: pointer;
       }
     }
-    &.fade {
+    &.on {
     transform: translate(-50%, -50%);
     opacity: 1;
-    z-index: 10;
     } 
   }
 }
