--- a/css/table.scss
+++ b/css/table.scss
@@ -2,41 +2,63 @@
 
 .content_box.table_wrap {
   width: 600px;
-  table {
+  table.table_wrap {
     width: 100%;
     border-top: 2px solid $gray03;
-    border-bottom: 2px solid $gray03;
     border-collapse: collapse;
     thead {
       color: $gray02;
       font-weight: bold;
       text-align: left;
     }
-  }
-  tbody tr {
-    transition: background-color 0.4s;
-    &:hover {
-      background-color: $gray04;
+    tbody tr {
+      transition: background-color 0.4s;
+    }
+    th {
+      border-bottom: 2px solid $gray05;
+      padding:10px;
+      position: relative;
+      &::after {
+      content: '\f078';
+      font-family: "Font Awesome 5 Free";
+      font-weight: 600;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      right: 10px;
+      }
     }
   }
-  th {
-    border-bottom: 2px solid $gray05;
-    padding:10px;
-    position: relative;
-    &::after {
-    content: '\f107';
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 0;
+}
+
+.scoll_t{
+  max-height: 235px;
+  overflow-y: scroll;
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    tr {
+      &:hover {
+        background-color: $gray04;
+      }
+      td {
+        border-bottom: 1px solid $gray05;
+        padding: 10px;
+      }
     }
   }
-  td {
-    border-bottom: 1px solid $gray03;
-    padding:10px;
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: $gray05;
+  }
+  &::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
   }
 }
