--- a/css/select.scss
+++ b/css/select.scss
@@ -36,6 +36,9 @@
         }
       }
     }
+  .select_btn {
+    position: relative;
+  }
   .dropdown {
     width: 100%;
     text-align: left;
@@ -46,7 +49,7 @@
     display: none;
     background-color: #fff;
     position: absolute;
-    top: 90px;
+    top: 55px;
     left: 0;
     li {
       padding: 15px 20px;
