--- a/css/button.css
+++ b/css/button.css
@@ -8,10 +8,12 @@
   padding-bottom: 10px;
 }
 .content_box .button {
+  display: block;
   width: 140px;
   height: 50px;
   font-size: 1rem;
   font-weight: 100;
+  margin-bottom: 10px;
   color: #58CE8F;
   background-color: #fff;
   border: 1px solid #58CE8F;
