--- a/css/button.scss
+++ b/css/button.scss
@@ -9,10 +9,12 @@
     padding-bottom: 10px;
   }
   .button {
+    display: block;
     width: 140px;
     height: 50px;
     font-size: 1rem;
     font-weight: 100;
+    margin-bottom: 10px;
     color: $green02;
     background-color: #fff;
     border: 1px solid $green02;
