--- a/css/style.scss
+++ b/css/style.scss
@@ -6,7 +6,7 @@
 @import "checkbox";
 @import "card";
 @import "modal";
-@import "comfirm";
+@import "confirm";
 @import "progress";
 @import "select";
 @import "table";
