--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@
 @import "progress";
 @import "select";
 @import "table";
+@import "pagination";
 
 @font-face {
   font-family: 'KOTRA_BOLD-Bold';
