--- a/css/style.css
+++ b/css/style.css
@@ -519,7 +519,7 @@
   top: 50%;
   transform: translateY(-50%);
   right: 10px;
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: #969696;
 }
 .select_wrap .select_btn {
@@ -610,6 +610,36 @@
 .scoll_t::-webkit-scrollbar-button {
   width: 0;
   height: 0;
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+}
+.pagination button, .pagination div {
+  display: block;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #E8E8E8;
+  border-radius: 5px;
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+  font-size: 1.5rem;
+  box-shadow: 0px 0px 3px rgba(177, 177, 177, 0.3);
+  transition: all 0.4s;
+  cursor: pointer;
+}
+.pagination button {
+  background-color: #FBFBFB;
+  color: #E8E8E8;
+}
+.pagination button.active {
+  color: #636363;
+  background-color: #fff;
+}
+.pagination button:last-child {
+  margin-right: 0;
 }
 
 @font-face {
